# auto-shutdown-manager

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  build.spec  main.py  pyproject.toml  requirements.txt  settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: __init__.py  config.py  localization.py  logger.py  monitor.py  tray.py
locales/: de.json  en.json
tests/: __init__.py  test_monitor.py
ui/: main_window.py  warning_dialog.py
